# waste-equity-platform

./: .env.example  .env.production.example  .gitignore  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260708_0001_core_metadata.py  20260708_0002_sgis_population_ingestion.py  20260708_0003_rcis_regional_waste.py  20260708_0004_rcis_facilities.py  20260709_0005_facility_geocoding.py  20260712_0006_structural_zoning.py  20260712_0007_structural_line_features.py  20260712_0008_widen_coverage_status.py  20260712_0009_structural_protected_features.py  20260712_0010_suitability_analysis.py  20260713_0011_dataset_version_is_active.py  20260713_0012_add_rcis_metric_reporting_geography.py  20260714_0013_landfill_inbound_flow.py  20260715_0014_monthly_population_observations.py  20260719_0015_facility_standard_costs.py  20260719_0016_suitability_critic_stability.py  20260723_0017_environmental_layer_registry.py  20260723_0018_wetland_inventory_features.py
backend/src/waste_equity_backend/: __init__.py  config.py  db.py
backend/src/waste_equity_backend/analysis/: __init__.py  facility_burden.py  facility_cost.py  facility_cost_seed.py  landfill.py  per_capita.py
backend/src/waste_equity_backend/api/: app.py
backend/src/waste_equity_backend/environment/: __init__.py  interfaces.py  layers.py
backend/src/waste_equity_backend/models/: __init__.py  base.py  environmental.py  facilities.py  facility_cost.py  landfill_inbound.py  metadata.py  regions.py  (+4 more)
backend/tests/: conftest.py  test_app_production.py  test_dataset_routes.py  test_dataset_routes_integration.py  test_environmental_registry.py  test_equity_routes.py  test_equity_routes_integration.py  test_facility_burden_analysis.py  test_facility_cost_engine.py  test_facility_cost_routes.py  test_facility_cost_seed.py  test_facility_mapping_transparency_integration.py  test_health.py  test_landfill_analysis.py  test_landfill_routes.py  test_metadata_routes.py  test_migration_facility_cost_integration.py  test_migration_integration.py  test_migration_population_monthly_integration.py  test_per_capita_analysis.py  test_reporting_per_capita.py  test_reporting_routes_integration.py  test_suitability_active_versions_integration.py  test_suitability_critic.py  test_suitability_policy.py  test_suitability_routes.py  test_suitability_routes_integration.py  test_suitability_scenario.py  test_suitability_scenario_routes_integration.py  test_suitability_scoring.py  test_suitability_stability.py
ingestion/: Dockerfile  README.md  pyproject.toml
ingestion/src/waste_equity_ingestion/: __init__.py  cli.py  config.py  errors.py  http.py  landfill_inbound.py  mois_population_contract.py  mois_population_ingestion.py  odcloud_contract.py  rcis_facility_contract.py  rcis_facility_ingestion.py  rcis_region_crosswalk.py  rcis_reporting_geography.py  rcis_waste_contract.py  rcis_waste_ingestion.py  result.py  samples.py  sgis_contract.py  sgis_ingestion.py  structural_clipping.py  structural_layer_ingestion.py  structural_layers.py  structural_manifest.py  suitability_build.py  validation.py  vworld_geocoding_contract.py  vworld_geocoding_ingestion.py  vworld_zoning_contract.py  vworld_zoning_ingestion.py  wetland_inventory_contract.py  wetland_inventory_ingestion.py
ingestion/tests/: test_contract_validation.py  test_landfill_inbound_persistence.py  test_landfill_odcloud_contract.py  test_mois_population_contract.py  test_mois_population_persistence.py  test_pid_discovery.py  test_rcis_credentials.py  test_rcis_facility_integration.py  test_rcis_facility_mapping.py  test_rcis_facility_parsing.py  test_rcis_facility_persistence.py  test_rcis_region_crosswalk.py  test_rcis_reporting_geography.py  test_rcis_reporting_geography_integration.py  test_rcis_waste_client.py  test_rcis_waste_integration.py  test_rcis_waste_parsing.py  test_rcis_waste_persistence.py  test_rcis_waste_quantity.py  test_sanitization.py  test_sgis_client.py  test_sgis_contract.py  test_sgis_ingestion_persistence.py  test_sgis_integration.py  test_structural_clipping.py  test_structural_layers.py  test_structural_manifest.py  test_vworld_geocoding_contract.py  test_vworld_geocoding_integration.py  test_vworld_geocoding_persistence.py  test_vworld_structural_contract.py  test_vworld_zoning_contract.py  test_vworld_zoning_loader.py  test_vworld_zoning_persistence.py  test_wetland_inventory_contract.py  test_wetland_inventory_ingestion.py
ingestion/tests/fixtures/: README.md
(+209 files in other folders)
