[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "waste-equity-ingestion"
version = "0.0.1"
description = "API probes and production ingestion jobs for Waste Equity Platform"
requires-python = ">=3.11"
dependencies = [
  "geoalchemy2>=0.15",
  "httpx>=0.27",
  "psycopg[binary]>=3.1",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "pyproj>=3.6",
  "pyshp>=2.3",
  "python-dotenv>=1.0",
  "shapely>=2.0",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
  "mypy>=1.10",
  "types-shapely>=2.0",
]

[project.scripts]
waste-equity-probe = "waste_equity_ingestion.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# python_version is 3.12 to match the development/CI interpreter; numpy 2.x
# (a transitive shapely dependency) ships 3.12-only stub syntax that mypy cannot
# parse under an older analysis target. Runtime support remains >=3.11.
[tool.mypy]
python_version = "3.12"
strict = true
files = ["src/waste_equity_ingestion"]
mypy_path = "../backend/src"

# pyshp (imported as ``shapefile``) ships no type stubs.
[[tool.mypy.overrides]]
module = "shapefile"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../backend/src"]
addopts = "-q"
